--- a/bspwm/.config/polybar/config.ini
+++ b/bspwm/.config/polybar/config.ini
@@ -34,7 +34,7 @@ font-0 = JetBrainsMono-Bold:style=Regular:pixelsize=10;2
 font-1 = FontAwesome:style=Regular:pixelsize=10;2
 font-2 = FontAwesome6Brands:style=Regular:pixelsize=11;2
 
-modules-left = xwindow
+modules-left = xwindow cmus
 modules-center = xworkspaces
 modules-right = cpu memory swap openweathermap-fullfeatured pulseaudio xkeyboard date powermenu
 
