--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -133,18 +133,17 @@ misc {
 
 input {
     kb_layout = us,ru
-    kb_variant = qwerty
     kb_model =
     kb_options = grp:ctrl_shift_toggle
     kb_rules =
-
+    numlock_by_default= true
     follow_mouse = 1
 
     sensitivity = -0.6 # -1.0 - 1.0, 0 means no modification.
 
-    touchpad {
-        natural_scroll = false
-    }
+ #   touchpad {
+ #       natural_scroll = false
+ #   }
 }
 
 gestures {
@@ -176,6 +175,8 @@ bind = $mainMod + SHIFT, W, exec, waypaper
 bind = $mainMod, W, exec, waypaper --random
 bind = $mainMod, B, exec, $browser 
 bind = $Alt, B, exec, $browser --private-window
+bind = $mainMod, Y, exec, yandex-browser-stable 
+bind = $mainMod, R, exec, retroarch 
 
 # Waybar
 
